Add logo and fix linking to css files

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>Queens JS</title>
-    <link rel="stylesheet" href="./style/normalize.css">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-
+    <img src="./images/queens-js-final.svg" alt="Queens JS Logo">
   </body>
 </html>
