Add background image and placeholder nav bar.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html>
   <head>
     <title>Queens JS</title>
+    <link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    <img src="./images/queens-js-final.svg" alt="Queens JS Logo">
+    <img class="logo" src="./images/queens-js-final.svg" alt="Queens JS Logo">
+    <h1>Queens JS</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Who We Are</a></li>
+        <li><a href="#">Past Events</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
