--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="./js/events.js"></script>
   </head>
   <body>
     <img class="logo" src="./images/queens-js-final.svg" alt="Queens JS Logo">
@@ -12,8 +14,17 @@
     <nav>
       <ul>
         <li><a href="#">Who We Are</a></li>
+        <li><a href="#">Become a Speaker</a></li>
+        <li><a href="#">Sponsorships</a></li>
         <li><a href="#">Past Events</a></li>
       </ul>
     </nav>
+    <section>
+      <p>Do you have a love for JavaScript? Do you want to hear people talk about JavaScript? Do you want to converse with others who know or are learning... JavaScript? Then Queens JS is the place for you! On the first Wednesday of every month, programmers from all over New York City gather in New York's largest borough to discuss the passions and pitfalls of the language that is everywhere, JavaScript.</p>
+    </section>
+    <section class="current">
+      <h2>Next Event</h2>
+      <p></p>
+    </section>
   </body>
 </html>
